# jvm

./: .gitignore  Cargo.toml  README.md  TODOS.md  build.rs  rust-toolchain.toml
cafebabe/: Cargo.toml  README.md
cafebabe/dump/: Cargo.toml
cafebabe/dump/src/: main.rs
cafebabe/src/: buffer.rs  class.rs  error.rs  find_native.rs  lib.rs  load.rs  types.rs
cafebabe/src/constant_pool/: attribute.rs  entry.rs  item.rs  mod.rs
src/: alloc.rs  bootstrap.rs  class.rs  classloader.rs  classpath.rs  constant_pool.rs  debug.rs  error.rs  exec_helper.rs  jvm.rs  lib.rs  main.rs  monitor.rs  preload.txt  properties.rs  storage.rs  thread.rs  types.rs
src/class/: args.rs  class.rs  loader.rs  mod.rs  object.rs
src/interpreter/: error.rs  frame.rs  insn.rs  interp.rs  mod.rs  native.rs
src/interpreter/insn/: bytecode.rs  exec.rs  instruction.rs  mod.rs  opcode.rs
src/jit/: mod.rs
src/jni/: api.rs  library.rs  mod.rs  sys.rs
src/natives/: gnu_classpath_jdwp_vmframe.rs  gnu_classpath_jdwp_vmmethod.rs  gnu_classpath_jdwp_vmvirtualmachine.rs  gnu_classpath_vmstackwalker.rs  gnu_classpath_vmsystemproperties.rs  java_io_vmconsole.rs  java_io_vmfile.rs  java_io_vmobjectinputstream.rs  java_io_vmobjectstreamclass.rs  java_lang_class.rs  java_lang_double.rs  java_lang_float.rs  java_lang_management_vmmanagementfactory.rs  java_lang_object.rs  java_lang_reflect_vmarray.rs  java_lang_reflect_vmconstructor.rs  java_lang_reflect_vmfield.rs  java_lang_reflect_vmmethod.rs  java_lang_reflect_vmproxy.rs  java_lang_system.rs  java_lang_vmclass.rs  java_lang_vmclassloader.rs  java_lang_vmdouble.rs  java_lang_vmfloat.rs  java_lang_vmmath.rs  java_lang_vmobject.rs  java_lang_vmprocess.rs  java_lang_vmruntime.rs  java_lang_vmsystem.rs  java_lang_vmthread.rs  java_lang_vmthrowable.rs  java_net_vminetaddress.rs  java_net_vmnetworkinterface.rs  java_net_vmurlconnection.rs  java_nio_mappedbytebufferimpl.rs  java_nio_vmdirectbytebuffer.rs  java_security_accesscontroller.rs  java_util_concurrent_atomic_atomiclong.rs  java_util_vmtimezone.rs  mod.rs  (+2 more)
test-cases/: Inheritance.java  Statics.java
