[package]
name = "jvm"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cafebabe = { path = "cafebabe" }
thiserror = "1.0"
log = "0.4"
env_logger = "0.8"
itertools = "0.10"
parking_lot = "0.11"
lazy_static = "1.4"
num_enum = "0.5"
strum = "0.21"
strum_macros = "0.21"
clap = "2.33"
whoami = "1.1"
dirs = "3.0"
libloading = "0.7"

[features]
default = []
log-class-loading = []
