[package]
name = "cafebabe"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "^1.0.20"
byte = "^0.2.4"
log = "^0.4.11"
num_enum = "^0.5.1"
bitflags = "^1.2.1"
mutf8 = "^0.4"
