[package]
name = "cafebabe"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
byte = "0.2"
log = "0.4"
num_enum = "0.5"
bitflags = "1.2"
mutf8 = { git = "https://github.com/DomWilliams0/mutf8" }
